# CustComm

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  MCP_SETUP.md
src/custcomm/: __init__.py  _time.py  cli.py  mcp.py  models.py  service.py
src/custcomm/ai/: __init__.py  appointments.py  classifier.py  drafter.py
src/custcomm/config/: __init__.py  business_hours.py  loader.py
src/custcomm/conversation/: __init__.py  history.py  threading.py
src/custcomm/crm/: __init__.py  database.py
src/custcomm/inbox/: __init__.py  base.py  gmail.py  imap.py
src/custcomm/mcp_server/: __init__.py  server.py
src/custcomm/outreach/: __init__.py  base.py  gmail.py  smtp.py
src/custcomm/scheduler/: __init__.py  appointments.py  followups.py
tests/: conftest.py  test_base_classes.py  test_business_hours.py  test_classifier_offline.py  test_config_loader.py  test_db.py  test_drafter_offline.py  test_history.py  test_mcp_import.py  test_service.py  test_signature.py  test_threading.py
