[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custcomm"
version = "0.1.0"
description = "AI-powered customer communications engine — email triage, reply drafting, appointment handling"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "CustComm contributors" },
]

dependencies = [
    # AI / LLM
    "anthropic>=0.30.0",

    # HTTP
    "httpx>=0.27.0",

    # Data handling
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "aiosqlite>=0.20.0",

    # Email sending fallback (IMAP read path is planned; Gmail API is primary)
    "aiosmtplib>=3.0.0",

    # Gmail API (primary inbox + send in v1)
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",

    # MCP server
    "mcp>=1.0.0",

    # Config & env
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",

    # Utilities
    "rich>=13.7.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
custcomm = "custcomm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/custcomm"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
